external-k8s/templates/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE_VAR
  labels:
    istio-injection: enabled
