external-k8s/templates/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: LB_NAME_VAR-lb
spec:
  rules:
    - http:
        paths:
          - path: /NAMESPACE_VAR
            pathType: Prefix
            backend:
              service:
                name: audit-srv
                port:
                  number: 80
